added in links to portfolio, adapted bio for current gained skills

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ so that they would be inline. -->
         </div>
 
   <!--  Here I inserted a navbar from getbootstrap with my links.  
-           To make sure the links stayed open and didn't collapse into a button I added the .navbar-expand class and deleted the button 
+           To make sure the links stayed open and didn't collapse into a button I added the 
+           .navbar-expand class and deleted the button 
       --> 
      
       <div class ="col-lg-9 col-md-12 col-sm-12">
@@ -84,13 +85,17 @@ so that they would be inline. -->
                       <p class="card-text">
                           I am a life-long learner and dedicated worker.  
                           I have achieved a Bachelor of Science degree from Bradley University, a Masters of Education degree from DePaul University and most recently, I am working on a certification through Northwestern for Full Stack Development Coding.    
-                        Throughout my previous employment, I have developed strong problem solving skills for unique situation, aligned with paitience and flexibility to see the situation through.
-                      </p>
-                      <p>
+                        </p>
+                        <p>
+                          Throughout my previous employment, I have developed strong problem solving skills for unique situation, 
+                          aligned with paitience and flexibility to see the situation through.  I enjoy collaborating with co-workers on projects and communicating thorugh various modes.
+                        </p> 
+                        <p>
                         To date I have experience in working with Gitbash, Github, Gitlab,
-                        and focused on coding in HTML and CSS languages.
-                        I am eager for the future and what is to come.  The more that I learn about coding the more that I want to learn! 
-                      </p>
+                        and focused on coding in HTML, CSS, Javascript and jQuery languages.
+                        I am eager for the future and what is to come.  
+                        </p>
+                      <a id= "gitLink" href = "https://github.com/SDamyan">Follow Me on Github!</a>
                     </div>
                   </div>
                 </div>
@@ -107,7 +112,6 @@ so that they would be inline. -->
 
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-     </body>
+  </body>
      
 </html>
