added in link placeholder for resume

--- a/index.html
+++ b/index.html
@@ -70,20 +70,24 @@
                           I have achieved a Bachelor of Science degree from Bradley University, a Masters of Education degree from DePaul University and most recently, I am working on a certification through Northwestern for Full Stack Development Coding.    
                         </p>
                         <p>
-                          Throughout my previous employment, I have developed strong problem solving skills for unique situation, 
-                          aligned with paitience and flexibility to see the situation through.  I enjoy collaborating with co-workers on projects and communicating thorugh various modes.
+                          Throughout my previous employment, I have developed strong problem solving skills for unique situations; 
+                          aligned with paitience and flexibility to see the situation through.  
+                          I enjoy collaborating with co-workers on projects and communicating thorugh various modes.
                         </p> 
                         <p>
                         To date I have experience in working with Gitbash, Github, Gitlab,
                         and focused on coding in HTML, CSS, Javascript and jQuery languages.
                         I am eager for the future and what is to come.  
                         </p>
-                        <p>Follow me on:</p>
-                      <a href = "/Mobile-Responsive-Portfolio/ASSETS/GitHub-Mark/PNG/GitHub-Mark-32px.png"></a>
                       
-                      <i class="fab fa-github"><a id= "gitLink" class= "links" href = https://github.com/SDamyan">Github</a></i>
-                      
+                        <p id = "followText"><u>Read more:</u>
+                          <a id= "resumeLink" class= "links" href = "https://github.com/SDamyan">Resume</a>
+                          <br/>
+                          <u>Follow me on:</u>
+                      <i class="fab fa-github"><a id= "gitLink" class= "links" href = "https://github.com/SDamyan">Github</a></i>
                       <i class="fab fa-linkedin"><a id ="linkedInLink" class = "links" href = "https://www.linkedin.com/in/sara-damyan-25781012b/">Linked In</a></i>
+                      </p>
+
                     </div>
                   </div>
                 </div>
