added in screenshots for readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       </div>
 
 <!--Here I made a separate row for my header.-->
-       <div class= "container" style="background-color: white" height="800px">
+       <div class= "container">
            
                     <div class="row">
                             <div class="col-lg-2 col-md-4 col-sm-12">
@@ -70,7 +70,7 @@
 Then on the body tag I used text-center and background-color to curtail the design.-->
     
 
-        <div class= "row">
+        <div id = "cardContainer" class= "row">
            <div class= "col-lg-3 col-md-6 col-sm-12"> 
 
             <div class="card">
